--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+)	background-image: (http://media.giphy.com/media/98Eerm5Gc8Tni/giphy.gif);
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
