--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-)	background-image: (https://media.giphy.com/media/JTewAB2JufhF6/giphy.gif);
+)	background-imag: https://images7.alphacoders.com/546/546605.jpg;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
