--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-)	background-imag: https://images7.alphacoders.com/546/546605.jpg;
+)	background-image: ("https://images7.alphacoders.com/546/546605.jpg");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
