--- a/style.scss
+++ b/style.scss
@@ -18,10 +18,10 @@ html {
 }
 
 body {
-)	background-image: ("https://images7.alphacoders.com/546/546605.jpg");
+	background-image: ("https://images7.alphacoders.com/546/546605.jpg");
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
-}
+  //color: $darkGray;
+ }
 
 .container {
   margin: 0 auto;
