--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background-image: ("https://images7.alphacoders.com/546/546605.jpg");
-  font: 18px/1.4 $helvetica;
+  font: $helvetica;
   //color: $darkGray;
  }
 
