--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: ("https://images7.alphacoders.com/546/546605.jpg");
+	background-image: url("https://media.giphy.com/media/l3zoKeX8bMG5sMP4s/giphy.gif");
   font: $helvetica;
   //color: $darkGray;
  }
