--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://media.giphy.com/media/l3zoKeX8bMG5sMP4s/giphy.gif");
+	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/7a/b7/99/7ab799d4cb1dc71a86fbf046e4f6f368.gif");
   font: $helvetica;
  color: #ffffff;
  }
