--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/7a/b7/99/7ab799d4cb1dc71a86fbf046e4f6f368.gif");
+	background-image: url("http://i.amz.mshcdn.com/WNEZtfuylAX6wZwaJWjUIKtEecM=/fit-in/850x850/http%3A%2F%2Fmashable.com%2Fwp-content%2Fgallery%2Fdavid-szakaly-gifs%2Fgif-7.gif");
   font: $helvetica;
  color: #ffffff;
  }
