--- a/style.scss
+++ b/style.scss
@@ -125,9 +125,9 @@ img {
   color: #f6ff00;
   background: #ffe500;
 }
-::selection {#ffe500
+::selection {
   color: #f6ff00;
-  background: $lightGray;
+  background: #ffe500;
 }
 
 // Nicolas Gallagher's micro clearfix hack
