--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("http://i.amz.mshcdn.com/WNEZtfuylAX6wZwaJWjUIKtEecM=/fit-in/850x850/http%3A%2F%2Fmashable.com%2Fwp-content%2Fgallery%2Fdavid-szakaly-gifs%2Fgif-7.gif");
+	background-image: url("https://secure.static.tumblr.com/7a111045547a1eecd7916c7a26665c36/higobuu/KFhnyh2ua/tumblr_static_tumblr_static_22cev7n5abi84ssg0sgk0scwc_640.gif");
   font: $helvetica;
  color: #ffffff;
  }
