--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background-image: url("https://secure.static.tumblr.com/7a111045547a1eecd7916c7a26665c36/higobuu/KFhnyh2ua/tumblr_static_tumblr_static_22cev7n5abi84ssg0sgk0scwc_640.gif");
   font: $helvetica;
- color: #ffffff;
+ color: #019da8;
  }
 
 .container {
