--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://secure.static.tumblr.com/7a111045547a1eecd7916c7a26665c36/higobuu/KFhnyh2ua/tumblr_static_tumblr_static_22cev7n5abi84ssg0sgk0scwc_640.gif");
+	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/09/c4/49/09c4499ab894fe3e91a515800169f49c.gif");
   font: $helvetica;
  color: #e52033;
  }
