--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/09/c4/49/09c4499ab894fe3e91a515800169f49c.gif");
+	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/f5/a6/27/f5a6275906b94322b2e7eb0729df17a4.gif");
   font: $helvetica;
- color: #e52033;
+ color:#000000;
  }
 
 .container {
