--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/f5/a6/27/f5a6275906b94322b2e7eb0729df17a4.gif");
+	background-image: url("http://i.imgur.com/qQqgeah.gif");
   font: $helvetica;
  color:#000000;
  }
