--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background-image: url("http://i.imgur.com/qQqgeah.gif");
   font: $helvetica;
- color:#000000;
+ color:#ff2339;
  }
 
 .container {
