--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("http://i.imgur.com/qQqgeah.gif");
+	background-image: url("http://pa1.narvii.com/5947/46d8487370b10fe5c797922c14edc428c791a141_hq.gif");
   font: $helvetica;
  color:#ff2339;
  }
