--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("http://pa1.narvii.com/5947/46d8487370b10fe5c797922c14edc428c791a141_hq.gif");
+	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/60/04/30/600430c1d22c731b94cf4e7dae6b398a.gif");
   font: $helvetica;
  color:#ff2339;
  }
